# pyhstr

./: .coveragerc  .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yaml  push.yaml
pyhstr/: __init__.py  __main__.py  app.py  application.py  init.py  io.py  ui.py  user_interface.py  util.py  utilities.py
tests/: fixtures.py  run  test_app.py  test_ui.py  test_utilities.py
tests/history/: fake_bpython_history  fake_ipython_history  fake_python_history
