[tool.poetry]
name = "pyhstr"
version = "0.2.3"
description = "History suggest box for the standard Python shell, IPython, and bpython"
authors = ["xvm32 <xvm32@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "pyhstr" },
    { include = "tests" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
mypy = "^0.790"
tox = "^3.20.1"
black = "^20.8b1"
pytest-cov = "^2.10.1"
tox-ini-fmt = "^0.5.0"
ipython = "^7.19.0"
pytest-lazy-fixture = "^0.6.3"
bpython = "^0.20.1"

[tool.pytest.ini_options]
addopts = "--cov=pyhstr --cov-append --cov-report=xml -v"
testpaths = [
    "tests",
]
markers = [
    "history_length",
    "all",
    "python",
    "ipython",
    "bpython",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
