[tool.poetry]
name = "pyhstr"
version = "0.5.2"
description = "History suggest box for the standard Python shell, IPython, and bpython"
authors = ["xqb64 <x@nuked.one>"]
license = "MIT"
packages = [
    { include = "pyhstr" },
    { include = "tests" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-lazy-fixture = "^0.6.3"
mypy = "^0.790"
tox = "^3.20.1"
tox-ini-fmt = "^0.5.0"
pylint = "^2.6.0"
ipython = "^7.19.0"
bpython = "^0.20.1"
tox-gh-actions = "^2.2.0"

[tool.pytest.ini_options]
addopts = "--cov=pyhstr --cov-append --cov-report=xml -v"
testpaths = [
    "tests",
]
markers = [
    "history_length",
    "all",
    "python",
    "ipython",
    "bpython",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
